Work in progress structure titles

--- a/proseminar.tex
+++ b/proseminar.tex
@@ -13,7 +13,13 @@
 \subsection{Awareness}
 \section{Goals}
 \section{Measurement Data}
+\subsection{Biological Signals}
+\subsection{Measuring}
+\subsection{Processing and evaluation}
 \section{Available Devices}
+\subsection{Neurosky - Mindwave Mobile 2}
+\subsection{InteraXon Inc. - Muse 2}
+\subsection{Emotiv - Epoc+}
 \section{Conclusion}
 
 
