Wrote a paragraph about goals and meditation

--- a/proseminar.tex
+++ b/proseminar.tex
@@ -10,8 +10,17 @@
 \section{Introduction}
 \subsection{Neurofeedback}
 \subsection{Meditation}
+Over the last decades, meditation has gained the interest of popular culture and the scientific community.
+Documented beneficial effects range from mood improvements to structural changes in various regions of the brain. \cite{Tang:et al}
+Though there is not one single meditation practice, the methods are plentiful. While often associated with stillness and watching ones breath,
+there are also more active forms of meditation that involve more movement. In this paper, we will not deal with specifics of and differences between concrete
+practices, but rather look at a general version of meditation and the mutual interaction with wearable neurofeedback devices.
 \subsection{Awareness}
 \section{Goals}
+Since the beneficial effects of meditation are so various, the potential goals of using a wearable device 
+that provides neurofeedback to its user are inherently diverse. Machine assisted meditation could help individuals to 
+improve faster, track their progresssion, analyze the state of mind and lower the entrance barrier for novel practicioners. \cite{brand:del} \
+
 \section{Measurement Data}
 \subsection{Biological Signals}
 \subsection{Measuring}
@@ -28,5 +37,7 @@
     Tracy Brandmeyer, Arnaud Delorme,
     Meditation and neurofeedback
     Frontiers in Psychology, Article 688 (October 2013).
+    \bibitem[Tang1]{Tang:et al}
+    Tang, Yi-Yuan, Britta K. Hölzel, and Michael I. Posner. "The neuroscience of mindfulness meditation." Nature Reviews Neuroscience 16.4 (2015): 213-225.
     \end{thebibliography}
 \end{document}
