--- a/proseminar.tex
+++ b/proseminar.tex
@@ -1,5 +1,6 @@
 \documentclass{llncs} %
 \bibliographystyle{splncs}
+\usepackage{url}
 \begin{document}
 
 \title{Supporting Meditative Awareness through Neurofeedback Wearables}
@@ -8,7 +9,10 @@
 \maketitle
 \newpage
 \section{Introduction}
-Meditation beneficial, popular, wearables cheaper and widespread adaptation. Inquring possibilty and state of the art of current devices for EEG meditation neurofeedback.
+Adoption and functionality of wearable devices are increasing and expected to continue to do so \cite{Patel}. In the west, meditation is accepted more widely as a means of health improvement \cite{Tang:et al}.
+Consumer EEG devices and freely available EEG/ERP databases \cite{ucsd} offer a chance to use algorithms to analyze a user's meditation experience and provide feedback for improvement.
+This work presents the current state of art of consumer EEG devices, the signals involved in meditation and the possibility for usage of such devices for meditation training.
+In the end, three popular EEG headsets will be compared and evaluated.
 \subsection{EEG}
 EEG stands for electroencephalography and is a process to record the electrical activity in the brain. The measured signal are voltage changes in and between neurons.
 The brains signal is in the order of mikrovolt \cite{Berger}.  For measurement, EEG electrodes are placed on the test subjects scalp. In Research, up to 256 electrodes are used \cite{Seeck}, while consumer grade devices use around 10\% of this. \cite{Maskeliunas}
@@ -45,7 +49,7 @@ Documented beneficial effects range from mood improvements to structural changes
 and the default mode network \cite{Tang:et al}.
 Therefore, meditation has become part of psychiatric interventions \cite{Hoelzel}, high performance sports and personal development.
 % QUOTE
-Historically, meditation stems from buddhist practices and has been part of eastern culture for centuries, though variations were also practiced by the ancient greeks.[]
+Historically, meditation stems from buddhist practices and has been part of eastern culture for centuries, though variations were also practiced by the ancient greeks \cite{Hadot:Davidson}.
 
 Though there is not one single meditation practice, the methods are plentiful. While often associated with stillness and watching ones breath,
 there are also more active forms of meditation that involve more movement. Travis and Shear categorize meditation practices into focused attention, open monitoring and automatic self-transcending.\cite{Travis} 
@@ -142,8 +146,17 @@ The time window of measurement is also crucial for the accuracy of machine learn
     \bibitem{Loo}
     Loo SK, Barkley RA. Clinical utility of EEG in attention deficit hyperactivity disorder. Appl Neuropsychol 2005; 12(2): 64-76.
     \bibitem{Davidson}
-    Buddha’s Brain: Neuroplasticity and Meditation
+    Davidson, Richard J., and Antoine Lutz. "Buddha's brain: Neuroplasticity and meditation [in the spotlight]." IEEE signal processing magazine 25.1 (2008): 176-174.
     \bibitem{Decho}
-    Analysis of the Meditation Brainwave from    Consumer EEG Device
+    Surangsrirat, Decho, and Apichart Intarapanich. "Analysis of the meditation brainwave from consumer EEG device." SoutheastCon 2015. IEEE, 2015.
+    \bibitem{Hadot:Davidson}
+    Hadot, Pierre; Arnold I. Davidson (1995) Philosophy as a Way of Life: Spiritual Exercises from Socrates to Foucault ISBN 0-631-18033-8 pages 83-84
+    \bibitem{Patel}
+    Patel, Mitesh S., David A. Asch, and Kevin G. Volpp. "Wearable devices as facilitators, not drivers, of health behavior change." Jama 313.5 (2015): 459-460.
+    \bibitem{ucsd}
+    \url{https://sccn.ucsd.edu/~arno/fam2data/publicly_available_EEG_data.html}
+
+
+
 \end{thebibliography}
 \end{document}
