--- a/proseminar.tex
+++ b/proseminar.tex
@@ -2,7 +2,6 @@
 \bibliographystyle{splncs}
 \usepackage{url}
 \usepackage{graphicx}
-\usepackage{caption}
 
 \newcommand{\source}[1]{\hfill Source: {#1} }
 
@@ -21,7 +20,7 @@ In the end, three popular EEG headsets will be compared and evaluated.
 \subsection{EEG}
 EEG stands for electroencephalography and is a process to record the electrical activity in the brain. The measured signal are voltage changes in and between neurons. EEG can only measure measure signal in the outer regions of the brain \cite{Sitaram}.
 The brains signal is in the order of mikrovolt \cite{Berger}.  For measurement, EEG electrodes are placed on the test subjects scalp. In Research, up to 256 electrodes are used \cite{Seeck}, while consumer grade devices use around 10\% of this. \cite{Maskeliunas}
-The electrical signal is measured as frequencies and go through an EEG ampflifier. These get passed to a Fast Fourier Transformation (FTT) or wavelet transformation \cite{Akin} to produce distinct waves, which are then categorized according to known patterns \cite{Shaker}.
+The electrical signal is measured as frequencies and goes through an EEG ampflifier. These get passed to a Fast Fourier Transformation (FTT) or wavelet transformation \cite{Akin} to produce distinct waves, which are then categorized according to known patterns \cite{Shaker}.
 Brain waves of individuals can be compared to aggravated data of many test subjects, to search for disorders \cite{Loo} or match for meditation success \cite{Tang:et al}, access to enough datapoints assumed.
 There are four main brain frequencies \cite{Cahn}:
 % quantitative eeg 
@@ -43,8 +42,8 @@ EEG devices are either gel based or dry. In Research, gel electrodes are used an
 Consumer devices on the other hand are dry, wireless and cost only a few hundreds of dollars. \cite{Decho}
 \subsection{Neurofeedback}
 Neurofeedback (NFB), also called EEG biofeedback, is a therapy that was invented as a method for training brainwave patterns through operant conditioning and is known since the 1960s \cite{Hammond}. %OK like that?
-It is used not only as a treatment of disorders, but also in peak performance training. NFB experiments led to the deleopment of the field of brain-machine interfaces \cite{Sitaram}.
-Operant conditioning is the learning process where a behavior is modified by punishment or reward, the famous example being Pavlov's dog \cite{Spence}. NFB never uses punishment though. In NFB, the neural activity is recorded and presented to the participant in real time.  
+It is used not only as a treatment of disorders \cite{brand:del}, but also in peak performance training. NFB experiments led to the deleopment of the field of brain-machine interfaces \cite{Sitaram}.
+Operant conditioning is the learning process where a behavior is modified by punishment or reward \cite{Spence}. NFB never uses punishment though. In NFB, the neural activity is recorded and presented to the participant in real time, either auditory or visual.  
 Usually people are not aware of their brain waves, so seeing them on a screen helps by giving you the ability to influence them. This is the operant conditioning part. In the beginning, the changes are only short-lived, but with practice can become lasting. 
 
 \begin{figure}
@@ -62,21 +61,19 @@ Over the last decades, meditation has gained the interest of popular culture and
 Documented beneficial effects range from mood improvements to structural changes \cite{Davidson} in various regions of the brain, such as the amygdala (responsible for stress and anxiety), anterior cingulate cortex, brain stem (breathing)
 and the default mode network \cite{Tang:et al}.
 Therefore, meditation has become part of psychiatric interventions \cite{Hoelzel}, high performance sports and personal development.
-% QUOTE
 Historically, meditation stems from buddhist practices and has been part of eastern culture for centuries, though variations were also practiced by the ancient greeks \cite{Hadot:Davidson}.
 
 Though there is not one single meditation practice, the methods are plentiful. While often associated with stillness and watching ones breath,
 there are also more active forms of meditation that involve more movement. Travis and Shear categorize meditation practices into focused attention, open monitoring and automatic self-transcending.\cite{Travis} 
 Since this categorization is based on different EEG patterns and would be part of the wearable device, I will follow this categorization and differentiate where appropriate.
-
-All these potential benefits lead to an increasing populace that wants to learn and practice meditation, so that a device that helps in the acquisition of this skill becomes desirable. 
-The demands, functions, challenges and applications for such a device are the topic of this work.
 \subsection{Awareness}
 Mindfulness and awareness are two terms often mentioned in the context of meditation and there is no exact, agreed upon scientific definition to separate these two.
+
+In current research contexts, mindfulness is typically defined as nonjudgmental attention to experiences in the present moment (Kabat-Zinn, 1990).
 \section{Goals}
 Since the beneficial effects of meditation are so various, the potential goals of using a wearable device 
 that provides neurofeedback to its user are inherently diverse. Machine assisted meditation could help individuals to 
-improve faster, track their progresssion, analyze the state of mind and lower the entrance barrier for novel practicioners. \cite{brand:del} \
+improve faster, track their progresssion, analyze the state of mind and lower the entrance barrier for novel practicioners. \cite{brand:del}
 
 The differences in EEG signals induced by the different meditation practices enable a categorization
 and dedicated training regime to offer the device and software solution to a wider audience. \cite{Travis}
@@ -85,25 +82,69 @@ and dedicated training regime to offer the device and software solution to a wid
 \begin{itemize}
     \item EEG
     \item brain blood flow infrared spectroscopy
+    \item ECoG
+    \item MEG 
+    \item NIRS
+    \item BOLD
+    \item haemodynamics
 \end{itemize}
 Combination of NIRS and EEG would be optimal! There is no such device yet for consumers though.
 Possible?
+
+EEG band meditation.
 
 \subsection{Measuring}
 \subsection{Challenges}
 Such a QEEG Assesment usually takes about 1.5 hours, which is too long for a consumer.
 Involuntary movement of the tongue, eyeballs, jaw and facial muscles produce noise in the milivolt range, while brain signals are on 
-the order of mikrovolt. These artifacts do not only occur in consumer great EEG devices, but also in medical grade.
+the order of mikrovolt. These artifacts do not only occur in consumer grade EEG devices, but also in medical grade.
 These artifacts need to be filtered out to produce a reliable signal for further analysis \cite{Bashivan: et al}, which will be extremely difficult, since the device would need to know when a person moved ever so slightly \cite{Hammond}.
 
-The time window of measurement is also crucial for the accuracy of machine learning models.
+The time window of measurement is also crucial for the accuracy of machine learning models. \cite{Bashivan: et al}
+
+
+Many learning theories and for the algorithm we need to decide which one we want to use as basis. 
+
+However, as cognitive strategies activate a network (see below), neural specificity can be experimentally addressed using control conditions such as oppos- ing directions of regulation37, differential feedback51, inverted feedback52, sham feedback53, mental imagery without any feedback53 or feedback from a different neural substrate54. \cite{Sitaram}
+
+Neurofeedback training may not always result in behavioural modifications. Studies in monkeys showed that the response of neurons in the motor cortex to operantly learned rewards are initially associated with active limb movements, but, as the monkey continues to activate the reward-linked neurons, the movements drop out entirely \cite{Sitaram}
+
+EEG signal might not be enough. \cite{Travis}.
+
+Most neurofeedback systems provide auditory or visual feedback that fully engage and demand the attention of the subject \cite{brand:del}
+
+Subjects just learn upregulating and downregulating EEG instead of actual meditation.
+
+Despite its promise, neurofeedback faces several chal- lenges, including the failure of some individuals to achieve self-regulation, inter-individual differences in learning capacity, uncertain long-term effects and unclear transfer benefits. Indeed, a substantial propor- tion — up to 30\% — of participants in neurofeedback and BCI studies fail to self-regulate specific brain activity even after repeated training.
+
+
+
+It was common for inexperienced users to wear the device too low on the forehead so the electrodes were placed over a sinus cavity rather than brain. This led to weaker than expected reading for frontal signals. Users with thick hair typically had problems getting a good contact with the temporal electrodes. \cite{Bashivan: et al}
+
+What is much less clear is whether and how meditation practices produce increased alpha beyond that obtained from reducing gen- eral arousal, which may become apparent only when fine-grained topographic mapping is combined with other neuroimaging meth- ods \cite{Cahn}
+
 \subsection{Processing and evaluation}
+In real-time analysis, the signal that is extracted from these methods is typically transformed into the frequency domain and decomposed into a specific frequency (for example, delta (0–4 Hz), theta (4–7 Hz), alpha (8–12 Hz), beta (12–30 Hz) and gamma (>30 Hz) bands) before feature extraction. Examples of feature extraction include coherence, power spectral density and their combinations for input to multivariate patterns, event-related potentials and slow cortical potentials. The signals can be processed either in sensor space (that is, individual electrodes) or source space (for example, beam formers164 or LORETA165) that enables a more accurate estimate of the activity in cortical regions that then is transformed into the feedback signal16 \cite{Sitaram}.
+
+\textbf{Feature extraction}
+
+We find our classification approach is able to distinguish between the baseline and meditation state on a second-by- second basis with a mean balanced success rate of 75.7\% \cite{Dixit}
+
+
 \cite{Lotte}
+
+Multivariate pattern analyses (MVPAs) was used to decode whole brain states associated with sustained atten- tion while participants performed a cognitive task. The level of difficulty of this task was automatically adjusted based on the decoded brain state to improve vigilance. \cite{Sitaram}
 \section{Training procedure}
+Learning to control brain activity in humans is determined by contingent feedback and reward, and potentially by ver- bal instructions and mental strategies (for example, use of imagery) that are suggested by the experimenter to the participant. \cite{Sitaram}
+
+Assuming that reliable and repro- ducible EEG signatures are associated with specific meditation practices, we may expect that training subjects to reproduce these signatures would support and strengthen their meditation practice.
+Clinical neurofeedback protocols are aim- ing toward comparing patients’ EEG with large EEG data sets from normal sub- jects in order to produce a neurofeed- back algorithm which rewards subjects (patients) whose EEG becomes closer to that of the normal population (Thornton and Carmody, 2009) \cite{brand:del}
 \section{Available Devices}
 \subsection{Neurosky - Mindwave Mobile 2}
 \subsection{InteraXon Inc. - Muse 2}
 \subsection{Emotiv - Epoc+}
+\section{The optimal device}
+However, we believe that with the development of novel approaches, such as thin tattoo-type elec- trodes, EEG recording will become practical in a much wider spectrum of real-life scenarios, and that recognizing mental states using wearables devices will become much more widespread \cite{Bashivan: et al}
 \section{Conclusion}
 
 
@@ -168,5 +209,10 @@ The time window of measurement is also crucial for the accuracy of machine learn
     Spence, Kenneth Wartenbee. Behavior theory and conditioning. Vol. 35. New Haven: yale university Press, 1956.
     \bibitem{Sitaram}
     Sitaram, Ranganatha, et al. "Closed-loop brain training: the science of neurofeedback." Nature Reviews Neuroscience 18.2 (2017): 86.
+    \bibitem{Dixit}
+    Dixit, Rohan. "Meditation training and neurofeedback using a personal EEG device." 2012 AAAI Spring Symposium Series. 2012.
+
+
+
 \end{thebibliography}
 \end{document}
